--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <script
+      async
+      src="https://platform.twitter.com/widgets.js"
+      charset="utf-8"></script>
+
     <!-- <link href="/src/style.css" rel="stylesheet" /> -->
   </head>
   <body>
